<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/image"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:contentDescription="@string/image_of_animal_to_share"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:srcCompat="@drawable/dog_placeholder" />

  <ScrollView
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/image"
    app:layout_constraintBottom_toTopOf="@id/share_button">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/scroll_view_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/message_to_share_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/message_to_share"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/message_to_share_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
      </com.google.android.material.textfield.TextInputLayout>

      <TextView
        android:id="@+id/share_to_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_headline_label"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_to_share_input_layout" />

      <CheckBox
        android:id="@+id/share_on_facebook_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/share_on_facebook_checkbox_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_to_label"/>

      <CheckBox
        android:id="@+id/share_on_twitter_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/share_on_twitter_checkbox_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_on_facebook_checkbox"/>

      <CheckBox
        android:id="@+id/share_on_myspace_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/share_on_myspace_checkbox_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_on_twitter_checkbox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/share_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:insetLeft="0dp"
    android:insetRight="0dp"
    android:insetBottom="0dp"
    app:cornerRadius="0dp"
    android:text="@string/share_button_label"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>